updated new selector